// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BulletText /> should match snapshot for custom bullet text 1`] = `
<li
  class="root variantPrimary"
>
  <div
    class="customBullet"
  >
    <span>
      <i
        class="root"
        style="width: 14px; height: 14px;"
      >
        <svg
          baseProfile="full"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M21 7L9 19l-5.5-5.5 1.414-1.414L9 16.172 19.586 5.586 21 7z"
          />
        </svg>
      </i>
    </span>
  </div>
  <span
    class="root sizeScale4"
  >
    Hello World
  </span>
</li>
`;

exports[`<BulletText /> should match snapshot for default bullet text 1`] = `
<li
  class="root variantPrimary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      •
    </span>
  </div>
  <span
    class="root sizeScale4"
  >
    Hello World!
  </span>
</li>
`;

exports[`<BulletText /> should match snapshot for ordered bullet text 1`] = `
<ol
  class="root variantPrimary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      ?
    </span>
  </div>
  <span
    class="root sizeScale4"
  >
    Hello World!
  </span>
</ol>
`;

exports[`<BulletText /> should match snapshot for primary bullet text with custom bullet character 1`] = `
<li
  class="root variantPrimary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      ?
    </span>
  </div>
  <span
    class="root sizeScale4"
  >
    Hello World!
  </span>
</li>
`;

exports[`<BulletText /> should match snapshot for secondary bullet text with custom bullet character 1`] = `
<li
  class="root variantSecondary"
>
  <div
    class="bullet"
  >
    <span
      class="bulletText"
    >
      ?
    </span>
  </div>
  <span
    class="root sizeScale4"
  >
    Hello World!
  </span>
</li>
`;
